--- a/scripts/main.Rmd
+++ b/scripts/main.Rmd
@@ -34,7 +34,7 @@ chaff_tidy <- pivot_longer(data = chaff_raw,
                            values_to = "mass")
 ```
 
-```{r create function}
+```{r create sumsq function}
 # the double braces are used to indicate a column of a dataframe
 sum_sq <- function(df, measure, group) {
   df %>% group_by({{ group }}) %>% 
@@ -45,5 +45,20 @@ sum_sq(chaff_tidy, mass, sex)
 ```
 
 #Results
+
+```{r summary function}
+# create function that summarizes data and includes
+# mean, sd, smaple size, se
+data_summary <- function(df, measure, group){
+ df %>% group_by({{group}}) %>% 
+  summarise(mean = mean({{measure}}),
+            n = length({{measure}}),
+            sd = sd({{measure}}),
+             se = sd/sqrt(n))
+}
+
+data_summary(chaff_tidy, mass, sex)
+```
+
 
 #Disscussion
