Added image of chaffinches to introduction. Cross referenced in text

--- a/scripts/chaffref.bib
+++ b/scripts/chaffref.bib
@@ -7,3 +7,15 @@
   howpublished = "\url{https://www.rspb.org.uk/birds-and-wildlife/wildlife-guides/bird-a-z/chaffinch/}",
   note         = "Accessed: 2020-11-12"
 }
+
+
+@MISC{noauthor_undated-js,
+  title        = "Chaffinch",
+  abstract     = "The colourful and delightful chaffinch is a regular garden
+                  visitor across the UK. Look out for it hopping about on the
+                  ground under birdtables and hedges.",
+  howpublished = "\url{https://www.wildlifetrusts.org/wildlife-explorer/birds/finches-and-buntings/chaffinch}",
+  note         = "Accessed: 2020-11-12"
+}
+
+
